tests/compile_fail/key_path_conflict.rs
use sorbe_tpl::config;

config! {
    ConflictConfig => {
        server: String,
        server.host: String,
    }
}

fn main() {}
