tests/compile_fail/key_path_conflict.stderr
error: Key path conflict: 'server' cannot have both direct value and nested fields
 --> tests/compile_fail/key_path_conflict.rs:3:1
  |
3 | / config! {
4 | |     ConflictConfig => {
5 | |         server: String,
6 | |         server.host: String,
7 | |     }
8 | | }
  | |_^
  |
  = note: this error originates in the macro `config` (in Nightly builds, run with -Z macro-backtrace for more info)
